# ptry-project

./: pyproject.toml
tests/: test_ptry_project.py
